WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13727
REGRESSION: Reproducible hang setting the selection's extent offset to -1
https://bugs.webkit.org/show_bug.cgi?id=13727
Summary
REGRESSION: Reproducible hang setting the selection's extent offset to -1
mitz
Reported
2007-05-14 23:55:40 PDT
getSelection().setBaseAndExtent(element, 0, element, -1) causes WebKit to hang.
Attachments
Test case (will hang)
(85 bytes, text/html)
2007-05-14 23:56 PDT
,
mitz
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-05-14 23:56:08 PDT
Created
attachment 14558
[details]
Test case (will hang)
Antti Koivisto
Comment 2
2007-05-16 08:04:06 PDT
<
rdar://problem/5206890
>
Antti Koivisto
Comment 3
2007-05-17 16:00:39 PDT
r21542
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug