WebCore/editing/SelectionController.cpp
@@ -31,6 +31,7 @@
 #include "Editor.h"
 #include "Element.h"
 #include "EventNames.h"
+#include "ExceptionCode.h"
 #include "FocusController.h"
 #include "Frame.h"
 #include "FrameTree.h"
@@ -719,9 +720,13 @@ String SelectionController::toString() const
     return String(plainText(m_sel.toRange().get()));
 }
 
-PassRefPtr<Range> SelectionController::getRangeAt(int index) const
+PassRefPtr<Range> SelectionController::getRangeAt(int index, ExceptionCode& ec) const
 {
-    return index == 0 ? m_sel.toRange() : 0;
+    if (index < 0 || index >= rangeCount()) {
+        ec = INDEX_SIZE_ERR;
+        return 0;
+    }   
+    return m_sel.toRange();
 }
 
 void SelectionController::removeAllRanges()
@@ -762,21 +767,33 @@ void SelectionController::addRange(const Range* r)
     }
 }
 
-void SelectionController::setBaseAndExtent(Node *baseNode, int baseOffset, Node *extentNode, int extentOffset)
+void SelectionController::setBaseAndExtent(Node *baseNode, int baseOffset, Node *extentNode, int extentOffset, ExceptionCode& ec)
 {
+    if (baseOffset < 0 || extentOffset < 0) {
+        ec = INDEX_SIZE_ERR;
+        return;
+    }
     VisiblePosition visibleBase = VisiblePosition(baseNode, baseOffset, DOWNSTREAM);
     VisiblePosition visibleExtent = VisiblePosition(extentNode, extentOffset, DOWNSTREAM);
     
     moveTo(visibleBase, visibleExtent);
 }
 
-void SelectionController::setPosition(Node *node, int offset)
+void SelectionController::setPosition(Node *node, int offset, ExceptionCode& ec)
 {
+    if (offset < 0) {
+        ec = INDEX_SIZE_ERR;
+        return;
+    }
     moveTo(VisiblePosition(node, offset, DOWNSTREAM));
 }
 
-void SelectionController::collapse(Node *node, int offset)
+void SelectionController::collapse(Node *node, int offset, ExceptionCode& ec)
 {
+    if (offset < 0) {
+        ec = INDEX_SIZE_ERR;
+        return;
+    }
     moveTo(VisiblePosition(node, offset, DOWNSTREAM));
 }
 
@@ -795,8 +812,12 @@ void SelectionController::empty()
     moveTo(VisiblePosition());
 }
 
-void SelectionController::extend(Node *node, int offset)
+void SelectionController::extend(Node *node, int offset, ExceptionCode& ec)
 {
+    if (offset < 0) {
+        ec = INDEX_SIZE_ERR;
+        return;
+    }
     moveTo(VisiblePosition(node, offset, DOWNSTREAM));
 }
 
